--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@
     <!-- Шапка сайта -->
     <header class="header container">
       <a href="/" class="logo">
-        <img src="/images/logo.png" alt="Лого: Индекс Еда" class="logo-image" />
+        <img
+          src="./images/logo.png"
+          alt="Лого: Индекс Еда"
+          class="logo-image"
+        />
       </a>
       <form action="#" class="search-form">
         <input class="search-input" type="search" placeholder="Блюда" />
         <button class="search-button">
           <img
-            src="/images/search-icon.png"
+            src="./images/search-icon.png"
             alt="search-icon"
             class="search-icon"
           />
@@ -35,7 +39,7 @@
       </div>
       <!-- /.auth -->
       <a href="#" class="shopping-cart">
-        <img src="/images/shopping-cart.png" alt="Карзина" />
+        <img src="./images/shopping-cart.png" alt="Карзина" />
         <span class="shopping-counter">12</span>
       </a>
     </header>
